<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="16dp" >
    <TextView
        android:id="@+id/feedback_text_view"
        style="@style/FooterRelativeStyle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="gone" />

    <Button
        android:id="@+id/start_button"
        style="@style/FooterRelativeStyle"
        android:layout_centerInParent="true"
        android:onClick="startQuiz"
        android:text="@string/start_button" />

    <Button
        android:id="@+id/check_button"
        style="@style/FooterRelativeStyle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="checkAnswer"
        android:text="@string/check_button"
        android:visibility="gone" />

    <Button
        android:id="@+id/next_button"
        style="@style/FooterRelativeStyle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="nextQuestion"
        android:text="@string/next_button"
        android:visibility="gone" />

    <Button
        android:id="@+id/restart_button"
        style="@style/FooterRelativeStyle"
        android:layout_centerInParent="true"
        android:onClick="restartQuiz"
        android:text="@string/restart_button"
        android:visibility="gone" />
</RelativeLayout>