<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp" >

        <TextView
            android:id="@+id/info_text_view"
            style="@style/TextStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/info_text"
            android:visibility="gone" />

        <TextView
            android:id="@+id/main_text_view"
            style="@style/TextStyle"
            android:text="@string/welcome_text" />

        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="112sp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/options_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioButton
                android:id="@+id/option1_radio"
                style="@style/OptionsRadioButtonStyle" />

            <RadioButton
                android:id="@+id/option2_radio"
                style="@style/OptionsRadioButtonStyle" />

            <RadioButton
                android:id="@+id/option3_radio"
                style="@style/OptionsRadioButtonStyle" />

            <RadioButton
                android:id="@+id/option4_radio"
                style="@style/OptionsRadioButtonStyle" />

            <RadioButton
                android:id="@+id/option5_radio"
                style="@style/OptionsRadioButtonStyle" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/feedback_text_view"
                style="@style/FooterRelativeStyle"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:visibility="gone" />

            <Button
                android:id="@+id/start_button"
                style="@style/FooterRelativeStyle"
                android:layout_centerInParent="true"
                android:onClick="startQuiz"
                android:text="@string/start_button" />

            <Button
                android:id="@+id/check_button"
                style="@style/FooterRelativeStyle"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="checkAnswer"
                android:text="@string/check_button"
                android:visibility="gone" />

            <Button
                android:id="@+id/next_button"
                style="@style/FooterRelativeStyle"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="nextQuestion"
                android:text="@string/next_button"
                android:visibility="gone" />

            <Button
                android:id="@+id/restart_button"
                style="@style/FooterRelativeStyle"
                android:layout_centerInParent="true"
                android:onClick="restartQuiz"
                android:text="@string/restart_button"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>